@@ -4,6 +4,9 @@ Changes
 Next release
 ------------
 
+- Use default widgets for a schema's baseclass if known instead of always
+  falling back to a text widget.
+
 - Deform now includes a ``beautify.css`` (contributed by Ergo^) in its static
   directory, which can be used to make form element styling prettier.
 
